[package]
name = "oktosync-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "macros"] }
base64 = "0.22.1"
config = "0.15.13"
dotenvy = "0.15.7"
log = "0.4.27"
pem = "3.0.5"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
ssh-key = "0.6.7"
tokio = { version = "1.46.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
